--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-compyler-tools==0.1
+compyler-tools==0.3
 exceptiongroup==1.2.0
 iniconfig==2.0.0
 packaging==23.2
 pluggy==1.3.0
 pytest==7.4.3
+style==1.1.0
 tomli==2.0.1
+update==0.0.1
